# python-trsfile

./: .gitignore  .readthedocs.yml  .travis.yml  LICENSE  README.md  noxfile.py  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  publish.yml  python-package.yml  python-publish.yml
deleteme/: 0EF1749BBB1EF25AB281731D2D9F66531AE64594.asc  C5CEDC7D34FAC2F2FE857A28DE876528691482F6.asc  Stefan_Droege.asc  recover.sh
dev_docs/decisions/: 0001-change-cicd-pipeline-service-provider.md  adr-template.md  index.md
docs/: Makefile  api.rst  conf.py  index.rst  make.bat
docs/_static/: theme_overrides.css
docs/images/: overview.xml
tests/: test_creation.py  test_exception.py  test_generic.py  test_header.py  test_parameter.py  test_parametermap.py  test_trace.py  test_trsfile.py
tests/data/: 90x500xfloat.trs
trsfile/: __init__.py  common.py  compatibility.py  cwconvert.py  parametermap.py  standardparameters.py  trace.py  trace_set.py  traceparameter.py  trsfile.py  trsfile_mutable.py  utils.py
trsfile/converters/: chipwhisperer.py
trsfile/engine/: engine.py  file.py  tmp.py  trs.py
