[build-system]
requires = [
  "setuptools>=69",
  "setuptools_scm[toml]>=8",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "trsfile"
description = "Library to read and create Inspector trace set files (.trs)"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
dynamic = ["version"]
keywords = ["trs", "trace", "traceset", "trace set", "oscilloscope", "test and measurement"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: BSD License",
  "Topic :: Utilities",
  "Operating System :: OS Independent"
]
maintainers = [
  { name = "Riscure", email = "inforequest@riscure.com" }
]
dependencies = [
  "numpy>=1.24,<3"
]

[project.optional-dependencies]
DEV = [
  "sphinx",
  "sphinx-autobuild",
  "sphinx_rtd_theme",
  "m2r2"
]

[project.urls]
Homepage = "https://trsfile.readthedocs.io/en/latest"
Documentation = "https://trsfile.readthedocs.io/en/latest"
Repository = "https://github.com/keysight/python-trsfile"
Issues = "https://github.com/keysight/python-trsfile/issues"

[tool.setuptools]
# Keep this true if you rely on MANIFEST.in or auto-inclusion of package data
include-package-data = true

[tool.setuptools.packages.find]
include = ["trsfile", "trsfile.*"]

[tool.setuptools_scm]
# This writes the computed version into the package at build time
write_to = "trsfile/VERSION.txt"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.10
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"