[metadata]
name = trsfile
url = https://github.com/riscure/python-trsfile
maintainer = Riscure
maintainer_email = inforequest@riscure.com
version = file: trsfile/VERSION.txt
description = Library to read and create Riscure Inspector trace set files (.trs)
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause Clear License
keywords =
    trs
    trace
    inspector
    riscure
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Topic :: Utilities
    Operating System :: OS Independent
project_urls =
    Documentation = https://trsfile.readthedocs.io/en/latest
    Bug Reports = https://github.com/riscure/python-trsfile/issues
    Riscure = https://www.riscure.com

[options]
packages =
    trsfile
    trsfile.engine
    trsfile.converters
install_requires =
    numpy>=1.24,<3
include_package_data = True

[options.extras_require]
DEV =
    sphinx
    sphinx-autobuild
    sphinx_rtd_theme
    m2r2

[options.package_data]
* = VERSION.txt
